@@ -4,7 +4,8 @@
 	* html decoding modified to decode numeric character codes
 	* modified gmtime() and localtime() to return the current GMT and local
 	  time (respectively) if no argument is passed to the functions
-	* added deflate(), inflate_to_string() and inflate_to_binary() functions
+	* updated compress(), compress2(), and uncompress_*() functions to use
+	  the streaming deflate/inflate API
 
 2007.02.05: David Nichols
 	* corrected a bug in the HTTPClient class where the Host field was being
